# innovati

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: innovati-technical-test-app-AutoDeployTrigger-3b8c956d-33a9-4a60-b30f-c40440d019b6.yml
src/app/: actions.py  config.py  db.py  deps.py  main.py  models.py  schemas.py
src/app/api/: router.py
src/app/email/: client.py
src/app/nlp/: client.py  parser.py
src/app/worker/: poller.py
src/tests/: conftest.py  test_actions.py
