[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "innovati"
version = "0.1.0"
description = "Innovati Fullstack Technical Test"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]",
    "pydantic>=2",
    "SQLAlchemy>=2",
    "aiosqlite; python_version >= '3.11'",
    "asyncpg; python_version >= '3.11'",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
    "google-generativeai>=0.7.0",
    "langchain>=0.2.10",
    "langchain-community>=0.2.9",
    "langchain-google-genai>=1.0.6"
]

[project.optional-dependencies]
test = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"